#########################################################################
# Bloch-McConnell 2-/3-state Fitting/Simulation Program
#  Isaac Kimsey
#########################################################################

Mar 07 2016
************
- Updated default plotting styles for fit and simulation plots.
	Removed symbols in figure legend, replaced with colored text to match SLPs.
	SLPs now split in to two columns.
- Updated how GS/ES1/ES2 vectors are normalized.

Mar 03 2016
************
- Can now directly simulate decaying magnetization and R1rho values at given
  spinlock powers and offsets. Both simulated magnetization and R1rho values
  can be noise corrupted.
- Magnetization vectors can be animated in 3D.
- Changed coloring method for plots so no repeating colors if number of spin lock powers is more than 8.
- Fixed brute-force parameter search so that all free parameters are fitted
	after lowest red. chi-sq is found from brute-search of N-parameter space.
- Can now create contour plots of brute-forced parameters from the fit csv file.

Feb 29 2016
************
- Can brute-force search over N-parameter space. Fit carries out from value
  that gives the lowest red. chi^2.

Feb 21 2016
************
!!! Note: Scipy >= v0.17 must be installed !!! (use: sudo pip install --upgrade scipy)
!!! Note: Pandas must be installed !!! (use: sudo pip install pandas)

- Output file replaced 'FuncEvals' with 'AlignMag' parameter
- Different fit models of the same data can be compared statistically using the command:
	>BMNS -compare [List of model CSVs]
- Changed local fitting function from "Least Squares Bound", to Scipy's new "Least Squares" function that has better bounding conditions.
- Changed standard error estimation procedure: standard error now calculated using fit Jacobian matrix, fit residuals, and degrees of freedom.
- Changed the way dG12 and dG12 are calculated using the '-thermo' option. Results are consistent with the previous method.